--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "prettier": "prettier --write ./**/*.{js,ts,json,md,mjs,yml}"
   },
+  "pre-commit": [
+    "test",
+    "prettier"
+  ],
   "devDependencies": {
     "@types/node": "^22.14.1",
     "@types/webpack": "^5.28.5",
@@ -20,6 +25,9 @@
     "copy-webpack-plugin": "^11.0.0",
     "d3": "^7.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "lodash": "^4.17.21",
+    "pre-commit": "^1.2.2",
+    "prettier": "^3.5.3",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.99.5",
