--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "webpack": "^5.99.6",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0",
-    "wepack-cli": "^0.0.1-security"
+    "webpack-merge": "^5.10.0"
   }
 }
